--- a/ProyectoDS_GabrielCastroRamirez.ipynb
+++ b/ProyectoDS_GabrielCastroRamirez.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# _***Simulacion partidos NBA***_\n",
     "\n",
-    "En el siguiente Notebook se analizaran los datos de las temporadas jugadas en el torneo de la NBA con una historia de datos desde el año 2003 hasta el 2019. Para este hacer el analisis de los datos se tomaran en cuenta los equipos cuando juegan en condicion de local y en condicion de visitante, como primera instancia se tendra que hacer una limpieza de datos (_***Data Wrangling***_) para asi quitar reduncias valores nulos etc.\n",
+    "En el siguiente Notebook se analizaran los datos de las temporadas jugadas en el torneo de la NBA con una historia de datos desde el año 2003 hasta el 2019. Para hacer el analisis de los datos se tomaran en cuenta los equipos cuando juegan en condicion de local y en condicion de visitante, como primera instancia se tendra que hacer una limpieza de datos (_***Data Wrangling***_) para asi quitar reduncias valores nulos etc.\n",
     "\n",
     "como paso siguiente se visualizaran los datos de acuerdo al analisis realizado para ver como es el flujo del puntaje y las asistencias obtenidas por los equipos cuando juegan en condicion de local y en condicion de visitante, luego se hara uso de los modelos de machine learning para asi predecir cual equipo tiene mas probabilidades de ganar si jugando como local o jugando como visitante.\n",
     "\n",
