--- a/ProyectoDS_GabrielCastroRamirez.ipynb
+++ b/ProyectoDS_GabrielCastroRamirez.ipynb
@@ -80,7 +80,7 @@
    "source": [
     "## 1. DATA WRANGLING\n",
     "\n",
-    "Como se observa en la linea de arriba sale una advertencia que dice que el conjunto de datos tiene tipos de datos combinandos en 6 columnas, este problema se solucionara haciendo la limpieza de datos (_***Data Wrangling***_)"
+    "Como se observa en la linea de arriba sale una advertencia que dice que el conjunto de datos tiene tipos de datos combinados en 6 columnas, este problema se solucionara haciendo la limpieza de datos (_***Data Wrangling***_)"
    ]
   },
   {
