--- a/ProyectoDS_GabrielCastroRamirez.ipynb
+++ b/ProyectoDS_GabrielCastroRamirez.ipynb
@@ -869,7 +869,7 @@
     "\n",
     "- Al resultado del metodo _***.where***_ de _***numpy***_ le asignamos el metodo _***.DataFrame***_ para convertir la serie de datos en un DataFrame y asi poder trabajar sobre este conjunto de datos.\n",
     "\n",
-    "- Cuando creamos el DataFrame le aplicamos el metodo _***.merge***_ para combinar los dos conjuntos de datos y poder poder graficar sus datos y obtener un mejor entendimiento de estos.\n",
+    "- Cuando creamos el DataFrame le aplicamos el metodo _***.merge***_ para combinar los dos conjuntos de datos y poder graficar sus datos y obtener un mejor entendimiento de estos.\n",
     "\n",
     "- Por medio de la libreria _***seaborn***_ se grafica una visualizacion de barras que mostrara el resultado de los equipos con mas victorias en el rango de años de la data historica del DataFrame.\n"
    ]
